# https://betterprogramming.pub/a-pyproject-toml-developers-cheat-sheet-5782801fb3ed

[project]
name = "workflow-automation"
version = "0.0.1"
authors = [
    {name = "Alfie Mills", email = "me@alfiemills.co.uk"},
]
description = "Description coming soon..."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",

]
dependencies = [

]