[tool.poetry]
name = "browser-automation"
version = "0.1.0"
description = ""
authors = ["alfie-mills <alfie.mills@outlook.com>"]
readme = "README.md"
packages = [{include = "browser_automation"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
alfie="browser_automation.main:cli"