[tool.poetry]
name = "browser-automation"
version = "0.1.0"
description = ""
authors = ["alfie-mills <alfie.mills@outlook.com>"]
readme = "README.md"
packages = [{include = "workflow_automation"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wfa="workflow_automation.main:cli"